--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ToDo</string>
+    <string name="yapilacak_is">Yapılacak İş</string>
+    <string name="kaydet">Kaydet</string>
+    <string name="guncelle">Güncelle</string>
 </resources>
