--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="yapilacak_is">Yapılacak İş</string>
     <string name="kaydet">Kaydet</string>
     <string name="guncelle">Güncelle</string>
+    <string name="ara">Ara</string>
 </resources>
