Add data binding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="kaydet">Kaydet</string>
     <string name="guncelle">Güncelle</string>
     <string name="ara">Ara</string>
+    <string name="sil">sil</string>
 </resources>
